[tool.poetry]
name = "mjx-gym"
version = "0.1.0"
description = ""
authors = ["TristanBester <tristanbester@gmail.com>"]
readme = "README.md"
packages = [{ include = "mjxgym" }]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
mujoco-mjx = "^3.1.3"
chex = "^0.1.86"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
