[tool.poetry]
name = "mjx-gym"
version = "0.1.0"
description = ""
authors = ["TristanBester <tristanbester@gmail.com>"]
readme = "README.md"
packages = [{ include = "mjxgym" }]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
mujoco-mjx = "^3.1.3"
chex = "^0.1.86"
jaxlib = "^0.4.25"
tqdm = "^4.66.2"
jax-tqdm = "^0.1.2"
matplotlib = "^3.8.3"
mediapy = "^1.2.0"
flax = "^0.8.2"
flashbax = "^0.1.2"
optax = "^0.2.2"
tensorboardx = "^2.6.2.2"
tensorboard = "^2.16.2"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
